--- a/.github/workflows/pages_graphs.yml
+++ b/.github/workflows/pages_graphs.yml
@@ -1,7 +1,7 @@
 name: Pages and Graphviz re-render
 on: 
   push:
-    paths: 'docs/**/*'
+    paths: './**/*'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch: 
@@ -27,7 +27,7 @@ jobs:
         ruby-version: '3.3' # Not needed with a .ruby-version file
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
         cache-version: 0 # Increment this number if you need to re-download cached gems
-        working-directory: '${{ github.workspace }}/docs'
+        working-directory: '${{ github.workspace }}'
     - name: Setup Pages
       id: pages
       uses: actions/configure-pages@v3
@@ -44,7 +44,7 @@ jobs:
       # Automatically uploads an artifact from the './_site' directory by default
       uses: actions/upload-pages-artifact@v1
       with:
-        path: "docs/_site"
+        path: "_site"
 
   # Deployment job
   deploy:
