--- a/.github/workflows/pages_graphs.yml
+++ b/.github/workflows/pages_graphs.yml
@@ -1,10 +1,5 @@
 name: Pages and Graphviz re-render
-on: 
-  push:
-    paths: './**/*'
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch: 
+on: push
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
