--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Plankton ML / pipelines
+title: UKCEH Research Software Engineering in Environmental Data Science
 email: jowals@ceh.ac.uk
 description: >- # this means to ignore newlines until "baseurl:"
-  This repository contains code, proof of concepts, test cases and workflows for low-investment methods to apply image machine learning to plankton characterisation.
+  This repository contains documentation and links for the Research Software Engineering group in Environmental Data Science at the UK Centre for Ecology and Hydrology
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  metazool
