--- a/.github/workflows/pages_graphs.yml
+++ b/.github/workflows/pages_graphs.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Build with Jekyll
       # Outputs to the './_site' directory by default
       # Will this copy the diagrams tho
-      run: bundle exec jekyll build --baseurl "."
+      run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
       env:
         JEKYLL_ENV: production
     - uses: ts-graphviz/setup-graphviz@v2
