--- a/.github/workflows/pages_graphs.yml
+++ b/.github/workflows/pages_graphs.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: docs
+        working-directory: .
     steps:
     - uses: actions/checkout@v4
     - name: Setup Ruby
