--- a/.github/workflows/pages_graphs.yml
+++ b/.github/workflows/pages_graphs.yml
@@ -1,5 +1,8 @@
 name: Pages and Graphviz re-render
-on: push
+on:
+  push:
+    branches:
+    - '!100_days'
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
