--- a/.github/workflows/pandoc_pdf.yml
+++ b/.github/workflows/pandoc_pdf.yml
@@ -8,6 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: docker://pandoc/latex:2.9
+      - name: Generate talk slides
         working-directory: ./team/talks
         with:
           args: -s --dpi=300 --slide-level 2 --toc --listings --shift-heading-level=0 --columns=50 -t beamer 100_days.md -o 100_days.pdf
