--- a/.github/workflows/pandoc_pdf.yml
+++ b/.github/workflows/pandoc_pdf.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: docker://pandoc/latex:2.9
         with:
-          args: -s --dpi=300 --slide-level 2 --toc --listings --shift-heading-level=0 --columns=50 -t beamer team/talks/100_days.md -o 100_days.pdf
+          args: -s -f markdown-implicit_figures --dpi=300 --slide-level 2 --toc --listings --shift-heading-level=0 --columns=50 -t beamer team/talks/100_days.md -o 100_days.pdf
           
       - uses: actions/upload-artifact@v3
         with:
