--- a/.github/workflows/pandoc_pdf.yml
+++ b/.github/workflows/pandoc_pdf.yml
@@ -7,9 +7,9 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - uses: docker://pandoc/latex:2.9
+      - uses: docker://pandoc/latex:3.3.0.0
         with:
-          args: -s -f markdown-implicit_figures --dpi=300 --slide-level 2 --toc --listings --shift-heading-level=0 --columns=50 -t beamer team/talks/100_days.md -o 100_days.pdf
+          args: -s --dpi=300 --slide-level 2 --toc --listings --shift-heading-level=0 --columns=50 -t beamer team/talks/100_days.md -o 100_days.pdf
           
       - uses: actions/upload-artifact@v3
         with:
