Add branches exclusion for 100 days

--- a/.github/workflows/pages_graphs.yml
+++ b/.github/workflows/pages_graphs.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
     - '*'
+    - '!100_days'
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
