Changed action to only run on main as branch protection in place.

--- a/.github/workflows/pages_graphs.yml
+++ b/.github/workflows/pages_graphs.yml
@@ -2,7 +2,7 @@ name: Pages and Graphviz re-render
 on:
   push:
     branches:
-    - '*'
+    - 'main'
     - '!100_days'
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
